[package]
name = "hyperstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.10"
prost-types = "0.10" 
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4.3" 
bitstream-io = "1.3.0"
snap = "1" 
tracing = "0.1"
tracing-subscriber = "0.2"
hyperstone-proto = { git="https://github.com/kshammer/hyperstone-proto" }
 
[build-dependencies]
prost-build = { version = "0.10" }

